--- a/index.html
+++ b/index.html
@@ -41,11 +41,19 @@
     <div class="side-bar">
       <div class="container">
         <img id="profile-pic" src="assets/pp_ayu.jpg" alt="Ayush Kumar Pic">
-        <h3 style="font-size: 2vw; font-weight: 500;" id="side-name">Ayush Kumar</h3>
+        <h3 style="font-size: 2vw;" id="side-name">Ayush Kumar</h3>
       </div>
       <p>Competitive Programmer | Web Developer</p>
 
-      
+      <div class="container side-hr mt-4">
+        <div class="pt-3">
+          <h5 style="font-size: 1.5vw;" class="pb-2">Profiles</h5>
+          <p><a href="https://www.github.com/ayushkumar1610" target="_blank"><img class="side-icon" src="assets/github-logo.png" alt=""> Github Profile</a></p>
+          <p><a href="https://www.codechef.com/users/ayushkumar1610" target="_blank"><img class="side-icon" src="assets/c5d9fc1e18bcf039f464c2ab6cfb3eb6.jpg" alt=""> CodeChef Profile</a></p>
+          <p><a href="mailto:ayushkumarlhs26@gmail.com" target="_blank"><img class="side-icon" src="assets/gmail.png" alt=""> Gmail Id</a></p>
+          <p><a href="https://www.linkedin.com/in/ayush-kumar-487528194/" target="_blank"><img class="side-icon" src="assets/linkedin.png" alt=""> LinkedIn Profile</a></p>
+        </div>
+      </div>
 
     </div>
 
