side bar content mobile size fix

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
       </div>
       
 
-      <div class="container mt-4" align=center>
+      <div class="container mt-4" id="icon-div" align=center>
           <p><a href="https://www.github.com/ayushkumar1610" target="_blank"><img class="side-icon-dark" src="assets/github-logo.png" alt=""> </a>
           <a href="https://www.codechef.com/users/ayushkumar1610" target="_blank"><img class="side-icon-dark" src="assets/chef.jpg" alt="">  </a>
           <!-- <p><a href="mailto:ayushkumarlhs26@gmail.com" target="_blank"><img class="side-icon" src="assets/gmail.png" alt=""> Gmail Id</a></p> -->
           <a href="https://www.linkedin.com/in/ayush-kumar-487528194/" target="_blank"><img class="side-icon" src="assets/linkedin.png" alt=""> </a></p>
-          <a href="assets/resume.pdf" target="_blank"><button class="btn btn-outline-success">Download Resume</button></a>
+          <a href="assets/resume.pdf" target="_blank"><button id="resume-btn" class="btn btn-outline-success">Download Resume</button></a>
       </div>
 
     </div>
