--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
     </div>
 
     <div class="content" id="home-content">
-      <h1>About</h1><br>
+      <h1>About <img id="programmer" src="assets/pro.gif"></h1><br>
+
       <p>
         Hi,<br>I'm Competitive Programmer and Web Developer. Currently Pursuing my B.Tech degree in 
         Information Technology (2019-2023). I'm always looking forward for great oppurtunity in I.T. industry.
@@ -79,25 +80,36 @@
     <div class="content" id="skills-content" style="display: none;">
 
       <h1>Skills</h1><br>
-      <div id="pskill">
-        <div class="card" style="width: 8rem;">
-          <img src="assets/java.png" class="card-img-top" alt="JAVA">
-          <!-- <div class="card-body" align="center"> -->
-            <!-- <h5 class="card-title">JAVA</h5> -->
-          <!-- </div> -->
-        </div>
-        <div class="card" style="width: 8rem;">
-          <img src="assets/dsa.png" class="card-img-top" alt="Data structures and algorithms">
-          <!-- <div class="card-body" align="center"> -->
-            <!-- <h5 class="card-title">Data Structure & Algorithms</h5> -->
-          <!-- </div> -->
-        </div>
-        <div class="card" style="width: 8rem;">
-          <img src="https://flyclipart.com/thumb2/python-logo-png-transparent-python-logo-images-205864.png" class="card-img-top" alt="Python">
-          <!-- <div class="card-body" align="center"> -->
-            <!-- <h5 class="card-title">JAVA</h5> -->
-          <!-- </div> -->
-        </div>
+      <div id="marq-skill">
+        <marquee width="100%" direction="right" height="100%">
+          <div id="pskill">
+            
+            <div class="card skill-card" style="width: 8rem;">
+              <img src="assets/java.png" class="card-img-top" alt="JAVA">
+              <!-- <div class="card-body" align="center"> -->
+                <!-- <h5 class="card-title">JAVA</h5> -->
+              <!-- </div> -->
+            </div>
+            <div class="card skill-card" style="width: 8rem;">
+              <img src="assets/dsa.png" class="card-img-top" alt="Data structures and algorithms">
+              <!-- <div class="card-body" align="center"> -->
+                <!-- <h5 class="card-title">Data Structure & Algorithms</h5> -->
+              <!-- </div> -->
+            </div>
+            <div class="card skill-card" style="width: 8rem;">
+              <img src="assets/py.png" class="card-img-top" alt="Python">
+              <!-- <div class="card-body" align="center"> -->
+                <!-- <h5 class="card-title">JAVA</h5> -->
+              <!-- </div> -->
+            </div>
+            <div class="card skill-card" style="width: 8rem;">
+              <img src="assets/spring.png" class="card-img-top" alt="Spring" align="center">
+              <!-- <div class="card-body" align="center"> -->
+                <!-- <h5 class="card-title">JAVA</h5> -->
+              <!-- </div> -->
+            </div>
+          </div>
+        </marquee>
       </div>
     </div>
       
