rotate text added

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="content" id="achievements-content">
 
           <h1>Achievements</h1><br>
-          <p>3 Star rated coder on competitive propramming pkatform CodeChef</p>
+          <p>3 Star rated coder on competitive propramming platform CodeChef</p>
         </div>
           
 
@@ -170,9 +170,45 @@
         <div class="content" id="contact-content">
 
           <h1>Contact</h1><br>
-          <p>contact content</p>
+          <div class="letter-image">
+            <div class="animated-mail">
+              <div class="back-fold"></div>
+              <div class="letter">
+                <div class="letter-border"></div>
+                <div class="letter-title"></div>
+                <div class="letter-context"></div>
+                <div class="letter-stamp">
+                  <div class="letter-stamp-inner"></div>
+                </div>
+              </div>
+              <div class="top-fold"></div>
+              <div class="body"></div>
+              <div class="left-fold"></div>
+            </div>
+            <div class="shadow"></div>
+          </div>
+          <div id="pcontact">
+            <p>contact content What Is Lorem Ipsum?
+Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+
+15th April 2018
+What Is Lorem Ipsum?
+Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+          </div>
 
         </div>
+
+        <div class="rotating-text">
+          <p>Hey! Ayush is</p>
+          <p>
+            <span class="word alizarin">developer.</span>
+            <span class="word wisteria">awesome.</span>
+            <span class="word peter-river">creative.</span>
+            <span class="word emerald">fabulous.</span>
+            <span class="word sun-flower">interesting.</span>
+          </p>
+        </div>
+
     </div>
     <div id="sideOpenDiv" onclick="openNav()">
       <p class="openbtn" id="obtn">&#10095;</p>
@@ -184,6 +220,10 @@
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="js/script.js"></script>
+
+  <link rel="stylesheet" href="css/mail.css">
+  <link rel="stylesheet" href="css/rotateTxt.css">
+  <script src="js/rotateTxt.js"></script>
     
 </body>
 </html>
