--- a/index.html
+++ b/index.html
@@ -86,84 +86,118 @@
         <div class="content" id="achievements-content">
 
           <h1>Achievements</h1><br>
-          <p>3 Star rated coder on competitive propramming platform CodeChef</p>
+
+          <main>
+            <ol class="gradient-list">
+              <li>
+                <h4>3 Star | CodeChef</h4>
+                <p>Achieved 3 star rating on competitive programming platform Codechef.</p>
+              </li>
+              <li>Aenean tincidunt elit at ipsum cursus, vitae interdum nulla suscipit.</li>
+              <li>Curabitur in orci vel risus facilisis accumsan.</li>
+            </ol>
+          </main>
         </div>
           
-
-        <div class="content timeline" id="project-content">
-          <h1>Projects</h1><br>
-          <ul>
-            <li>
-              <span>3rd January 2020</span>
-              <div class="content">
-                <h3>What Is Lorem Ipsum?</h3>
-                <p>
-                  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-                </p>
-              </div>
-            </li>
-            <li>
-              <span>21st Jun 2019</span>
-              <div class="content">
-                <h3>What Is Lorem Ipsum?</h3>
-                <p>
-                  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                </p>
-              </div>
-            </li>
-            <li>
-              <span>15th April 2018</span>
-              <div class="content">
-                <h3>What Is Lorem Ipsum?</h3>
-                <p>
-                  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                </p>
-              </div>
-            </li>
-            <li>
-              <span>22nd Mars 2017</span>
-              <div class="content">
-                <h3>What Is Lorem Ipsum?</h3>
-                <p>
-                  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
-                </p>
-              </div>
-            </li>
-          </ul>
+        <div class="content" id="project-content">
+          <h1>Projects</h1>
+          <div class="timeline">
+            <ul>
+              <li>
+                <span>3rd January 2020</span>
+                <div class="content">
+                  <h3>What Is Lorem Ipsum?</h3>
+                  <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+                  </p>
+                </div>
+              </li>
+              <li>
+                <span>21st Jun 2019</span>
+                <div class="content">
+                  <h3>What Is Lorem Ipsum?</h3>
+                  <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                  </p>
+                </div>
+              </li>
+              <li>
+                <span>15th April 2018</span>
+                <div class="content">
+                  <h3>What Is Lorem Ipsum?</h3>
+                  <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                  </p>
+                </div>
+              </li>
+              <li>
+                <span>22nd Mars 2017</span>
+                <div class="content">
+                  <h3>What Is Lorem Ipsum?</h3>
+                  <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.
+                  </p>
+                </div>
+              </li>
+            </ul>
+          </div>
         </div>
 
         <div class="content" id="skills-content">
 
           <h1>Skills</h1><br>
-          <div id="marq-skill">
-              <div id="pskill">
-                
-                <div class="card skill-card" style="width: 8rem;">
-                  <img src="assets/java.png" class="card-img-top" alt="JAVA">
-                  <!-- <div class="card-body" align="center"> -->
-                    <!-- <h5 class="card-title">JAVA</h5> -->
-                  <!-- </div> -->
-                </div>
-                <div class="card skill-card" style="width: 8rem;">
-                  <img src="assets/dsa.png" class="card-img-top" alt="Data structures and algorithms">
-                  <!-- <div class="card-body" align="center"> -->
-                    <!-- <h5 class="card-title">Data Structure & Algorithms</h5> -->
-                  <!-- </div> -->
-                </div>
-                <div class="card skill-card" style="width: 8rem;">
-                  <img src="assets/py.png" class="card-img-top" alt="Python">
-                  <!-- <div class="card-body" align="center"> -->
-                    <!-- <h5 class="card-title">JAVA</h5> -->
-                  <!-- </div> -->
-                </div>
-                <div class="card skill-card" style="width: 8rem;">
-                  <img src="assets/spring.png" class="card-img-top" alt="Spring" align="center">
-                  <!-- <div class="card-body" align="center"> -->
-                    <!-- <h5 class="card-title">JAVA</h5> -->
-                  <!-- </div> -->
-                </div>
-              </div>
-          </div>
+            <div class="chip">
+              <img src="assets/java.png" alt="java" width="96" height="96">
+                JAVA
+            </div>
+            <div class="chip">
+              <img src="assets/spring.png" alt="spring" width="96" height="96">
+                SPRING
+            </div>
+            <div class="chip">
+              <img src="assets/dsa.png" alt="DSA" width="96" height="96">
+                DATA STRUCTURES
+            </div>
+            <div class="chip">
+              <img src="assets/oops.jpg" alt="oops" width="96" height="96">
+                OOPs
+            </div>
+            <div class="chip">
+              <img src="assets/py.png" alt="python" width="96" height="96">
+                PYTHON
+            </div>
+            <div class="chip">
+              <img src="assets/dsa.png" alt="DSA" width="96" height="96">
+                ALGORITHMS
+            </div>
+            <div class="chip">
+              <img src="assets/html.jpg" alt="html" width="96" height="96">
+                HTML
+            </div>
+            <div class="chip">
+              <img src="assets/git.png" alt="git" width="96" height="96">
+                GIT
+            </div>
+            <div class="chip">
+              <img src="assets/sql.jpg" alt="sql" width="96" height="96">
+                SQL
+            </div>
+            <div class="chip">
+              <img src="assets/css.png" alt="css" width="96" height="96">
+                CSS
+            </div>
+            <div class="chip">
+              <img src="assets/rest.png" alt="rest api" width="96" height="96">
+                REST APIs
+            </div>
+            <div class="chip">
+              <img src="assets/ng.png" alt="angular" width="96" height="96">
+                ANGULAR
+            </div>
+            <div class="chip">
+              <img src="assets/js.jpg" alt="JS" width="96" height="96">
+                JAVASCRIPT
+            </div>
         </div>
 
 
