--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="#000000e6" />
+  <meta name="theme-color" content="#191919" />
   <title>Portfolio-Ayush</title>
   <link rel="icon" type="image/png" href="assets/fav.png"/>
   <!-- CSS only -->
