--- a/index.html
+++ b/index.html
@@ -92,9 +92,16 @@
               <li>
                 <h4>3 Star | CodeChef</h4>
                 <p>Achieved 3 star rating on competitive programming platform Codechef.</p>
+                <p>Secured Global rank 442 in Starter 7.</p>
               </li>
-              <li>Aenean tincidunt elit at ipsum cursus, vitae interdum nulla suscipit.</li>
-              <li>Curabitur in orci vel risus facilisis accumsan.</li>
+              <li>
+                <h4>100+ Questions | LeetCode</h4>
+                <p>Solved 100+ question of Data Structures and Algorithms on coding platform LeetCode.</p>
+              </li>
+              <li>
+                <h4>Master The Mainframe Challenge-2019 | IBM</h4>
+                <p>Completed all the 3 challenges of Master the Mainframe challenge, a coding challenge organised by IBM.</p>
+              </li>
             </ol>
           </main>
         </div>
@@ -104,24 +111,30 @@
           <div class="timeline">
             <ul>
               <li>
-                <span>3rd January 2020</span>
+                <span>Car Pool</span>
                 <div class="content">
-                  <h3>What Is Lorem Ipsum?</h3>
+                  <h3>Web Devlopment Project</h3>
                   <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+                    A web application where people can share their ride to save fuel and enviroment. Features like Map, Authentication and Security has been provided. 
+                  </p>
+                  <p>
+                    Tech Used: Angular, Spring, Java, TypeScript, Git, Sql.
                   </p>
                 </div>
               </li>
               <li>
-                <span>21st Jun 2019</span>
+                <span>Code Log</span>
                 <div class="content">
-                  <h3>What Is Lorem Ipsum?</h3>
+                  <h3>Web Development Project</h3>
                   <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    A CRUD based web page, where user gets blog like features. This project aims to those user who are interested in coding, users can share code snippets to get suggestions and to help other.
+                  </p>
+                  <p>
+                    Technology used: Django, Python, HTML, CSS, JavaScript, SQLite.
                   </p>
                 </div>
               </li>
-              <li>
+              <!-- <li>
                 <span>15th April 2018</span>
                 <div class="content">
                   <h3>What Is Lorem Ipsum?</h3>
@@ -129,7 +142,7 @@
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                   </p>
                 </div>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
@@ -197,8 +210,8 @@
           <h1>Contact</h1><br>
           
           <div id="pcontact">
-            <p>contact content What Is Lorem Ipsum?
-Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <h4>Wanted To Connect ?</h4>
+            <p>Drop a mail or let's connect on LinkedIn.</p>
             <p>
               <a href="mailto:ayushkumarlhs26@gmail.com" target="_blank"><img class="side-icon" src="assets/gmail.png" alt="">&nbsp Mail Me</a>
             </p>
